--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "izypd <52zypd@gmail.com>",
   "license": "GPL-3.0-only",
   "devDependencies": {
+    "prettier": "^2.4.1",
     "typescript": "^4.4.4"
   }
 }
