--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "description": "React TypeScript template",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "build": "webpack --config scripts/webpack/webpack.prod.config.js",
+    "dev": "webpack serve --config scripts/webpack/webpack.dev.config.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/izypd/react-ts.git"
@@ -15,6 +18,7 @@
     "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
+    "clean-terminal-webpack-plugin": "^3.0.0",
     "eslint": "^8.1.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
@@ -23,8 +27,15 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.4.0",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0",
+    "webpack-merge": "^5.8.0",
+    "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
     "react": "^17.0.2",
