--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config scripts/webpack/webpack.prod.config.js",
-    "dev": "webpack serve --config scripts/webpack/webpack.dev.config.js"
+    "dev": "webpack serve --config scripts/webpack/webpack.dev.config.js",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,8 @@
   "author": "izypd <52zypd@gmail.com>",
   "license": "GPL-3.0-only",
   "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
@@ -29,6 +32,8 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.4.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
     "react-refresh": "^0.10.0",
     "react-refresh-typescript": "^2.0.2",
