--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "author": "izypd <52zypd@gmail.com>",
   "license": "GPL-3.0-only",
+  "module": "/dist/es/index.js",
+  "types": "./dist/es/index.d.ts",
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
